# minhash

./: .travis.yml  ChangeLog.md  README.md  minhash.cabal
src/Data/: MinHash.hs
test/: Tests.hs
