name: minhash
version: 0.1.0.0
synopsis: MinHash
description: MinHash with a single hash function
homepage: https://github.com/larskuhtz/minhash
bug-reports: https://github.com/larskuhtz/minhash/issues
license: MIT
license-file: LICENSE
author: Lars Kuhtz
maintainer: lakuhtz@gmail.com
copyright: Copyright (C) 2018 Lars Kuhtz <lakuhtz@gmail.com>
category: Data, Data Structures
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10
tested-with:
      GHC == 8.4.3
    , GHC == 8.2.2

extra-source-files:
    ChangeLog.md
    README.md
    .travis.yml

source-repository head
    type: git
    location: https://github.com/larskuhtz/minhash

library
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
    exposed-modules: Data.MinHash
    build-depends:
          base >=4.10 && <5.0
        , base-unicode-symbols >=0.2
        , containers >=0.5
        , murmur-hash >=0.1

test-suite tests
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -Wall
    main-is: Tests.hs
    build-depends:
          minhash
        , base >=4.10 && <5.0
        , base-unicode-symbols >=0.2
        , containers >=0.5
        , mwc-random >=0.14
